# Birdview_VO

./: .gitignore  CMakeLists.txt  README.md
include/: Config.h  CostFunctors.h  FeatureLine.h  Frame.h  IcpSolver.h  KeyFrame.h  KeyLineGeometry.h  LineExtractor.h  LineGeometry.h  LocalMapping.h  Map.h  MapPoint.h  Optimizer.h  PointExtractor.h  PointMatcher.h  SE2.h  System.h  Tracking.h  Viewer.h
include/se3Quat/: se3_ops.h  se3quat.h  sim3.h
src/: Config.cpp  FeatureLine.cpp  Frame.cpp  IcpSolver.cpp  KeyFrame.cpp  KeyLineGeometry.cpp  LineExtractor.cpp  LineGeometry.cpp  LocalMapping.cpp  Map.cpp  MapPoint.cpp  Optimizer.cpp  PointExtractor.cpp  PointMatcher.cpp  SE2.cpp  System.cpp  Tracking.cpp  Viewer.cpp
test/: cmdLine.h  cost_functor.h  test_ceres.cpp  test_line.cpp  test_line_geometry.cpp  test_vo.cpp
